@@ -2,7 +2,7 @@ from pyramid.configuration import Configurator
 from pyramid.authentication import AuthTktAuthenticationPolicy
 from pyramid.authorization import ACLAuthorizationPolicy
 
-from pyramid.settings import asbool
+from sqlalchemy import engine_from_config
 
 from tutorial.models import initialize_sql
 from tutorial.security import groupfinder
@@ -10,11 +10,8 @@ from tutorial.security import groupfinder
 def main(global_config, **settings):
     """ This function returns a WSGI application.
     """
-    db_string = settings.get('db_string')
-    if db_string is None:
-        raise ValueError("No 'db_string' value in application configuration.")
-    db_echo = settings.get('db_echo', 'false')
-    initialize_sql(db_string, asbool(db_echo))
+    engine = engine_from_config(settings, 'sqlalchemy.')
+    initialize_sql(engine)
     authn_policy = AuthTktAuthenticationPolicy(
         'sosecret', callback=groupfinder)
     authz_policy = ACLAuthorizationPolicy()
