@@ -3,7 +3,6 @@ import transaction
 from pyramid.security import Allow
 from pyramid.security import Everyone
 
-from sqlalchemy import create_engine
 from sqlalchemy import Column
 from sqlalchemy import Integer
 from sqlalchemy import Text
@@ -30,8 +29,7 @@ class Page(Base):
        self.name = name
        self.data = data
 
-def initialize_sql(db_string, echo=False):
-    engine = create_engine(db_string, echo=echo)
+def initialize_sql(engine):
     DBSession.configure(bind=engine)
     Base.metadata.bind = engine
     Base.metadata.create_all(engine)
