@@ -1,6 +1,5 @@
 import transaction
 
-from sqlalchemy import create_engine
 from sqlalchemy import Column
 from sqlalchemy import Integer
 from sqlalchemy import Unicode
@@ -33,8 +32,7 @@ def populate():
     session.flush()
     transaction.commit()
     
-def initialize_sql(db_string, db_echo=False):
-    engine = create_engine(db_string, echo=db_echo)
+def initialize_sql(engine):
     DBSession.configure(bind=engine)
     Base.metadata.bind = engine
     Base.metadata.create_all(engine)
