@@ -1,6 +1,5 @@
 import transaction
 
-from sqlalchemy import create_engine
 from sqlalchemy import Column
 from sqlalchemy import Integer
 from sqlalchemy import Text
@@ -27,8 +26,7 @@ class Page(Base):
        self.name = name
        self.data = data
 
-def initialize_sql(db_string, echo=False):
-    engine = create_engine(db_string, echo=echo)
+def initialize_sql(engine):
     DBSession.configure(bind=engine)
     Base.metadata.bind = engine
     Base.metadata.create_all(engine)
