@@ -3,8 +3,9 @@ import unittest
 class MyHandlerTests(unittest.TestCase):
     def setUp(self):
         from pyramid.configuration import Configurator
+        from sqlalchemy import create_engine
         from {{package}}.models import initialize_sql
-        self.session = initialize_sql('sqlite://')
+        self.session = initialize_sql(create_engine('sqlite://'))
         self.config = Configurator()
         self.config.begin()
 
